[package]
name = "cpu_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
